--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NPM Detailed Notes</title>
-    <script src="script.js" type="modules"></script>
+    <script src="script.js" type="module"></script>
+
     <style>
       body {
         font-family: Arial, sans-serif;
